--- a/templates/pageForm.html
+++ b/templates/pageForm.html
@@ -18,7 +18,7 @@
     />
     <title>Download</title>
 </head>
-<body style="background: url({% static 'images/bk.jpg' %})">
+<body style="background-image:linear-gradient(0,rgba(112, 128, 144,0.6), rgba(112, 128, 144,0.6)), url({% static 'images/bk.jpg' %})">
     <div id="header">
         <nav class="container">
             <a href="" id="logo">
