--- a/static/css/mainPage.css
+++ b/static/css/mainPage.css
@@ -67,3 +67,194 @@ font-family: 'Montserrat', sans-serif;
     color: white;
     background-color: brown;
 }
+
+
+/*body*/
+
+.noidung{
+  margin: auto;
+  width: 100%;
+  padding: 70px 30px;
+}
+  :root {
+    --q: yellow;
+    --dark: #16213e;
+    --light: #fff;
+    --cn: brown;
+    --tao: brown;
+    --gray: #cccccc;
+  }
+  
+  .notifications {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+  }
+  .notifications .column,
+  .toast {
+    display: flex;
+    align-items: center;
+  }
+  .notifications .toast {
+    width: 300px;
+    position: relative;
+    list-style: none;
+    background: var(--q);
+    border-radius: 50px;
+    margin-bottom: 10px;
+    padding: 20px;
+    justify-content: space-between;
+    overflow: hidden;
+    animation: show_toast 0.5s ease forwards;
+  }
+  .notifications .toast.remove {
+    animation: hide_toast 0.3s ease forwards;
+  }
+  @keyframes hide_toast {
+    0% {
+      transform: translateX(0%);
+    }
+    40% {
+      transform: translateX(0%);
+    }
+    80% {
+      transform: translateX(-5%);
+    }
+    100% {
+      transform: translateX(calc(100% + 20px));
+    }
+  }
+  @keyframes show_toast {
+    0% {
+      transform: translateX(100%);
+    }
+    40% {
+      transform: translateX(-5%);
+    }
+    80% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-10px);
+    }
+  }
+  .toast::before {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    animation: progress 5s linear forwards;
+  }
+  @keyframes progress {
+    100% {
+      width: 0%;
+    }
+  }
+  
+  .toast.cn::before,
+  .btn#cn {
+    background-color: var(--cn);
+  }
+  .toast.tao::before,
+  .btn#tao {
+    background-color: var(--tao);
+  }
+  .toast .column i {
+    font-size: 1.5rem;
+    margin-right: 10px;
+  }
+  .toast.cn .column i {
+    color: var(--cn);
+  }
+  .toast.tao .column i {
+    color: var(--tao);
+  }
+  .toast .column .span {
+    font-size: 1.2rem;
+  }
+  .toast i:last-child {
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: var(--upsv);
+    transition: all 0.2s ease-in-out;
+  }
+  .toast i:last-child:hover {
+    color: var(--dark);
+  }
+  .buttons .btn {
+    
+    max-width: 1000px;
+    background-color: brown;
+    margin: 30px 30px;
+    border: none;
+    outline: none;
+    padding: 20px 20px;
+    border-radius: 30px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-right: 10px;
+    transition: all 0.2s ease-in-out;
+    color: var(--light);
+    box-shadow: 1px 1px 5px brown;
+  }
+  .buttons .btn:hover {
+    
+    box-shadow: 10px 10px 5px brown;
+  }
+.custom-file-input {
+  display: none;
+}
+.custom-file-input-label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1000px;
+  background-color: brown;
+  margin: 30px 30px;
+  padding: 20px 20px;
+  border-radius: 30px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-right: 10px;
+  color: var(--light);
+  box-shadow: 2spx 2px 5px brown;
+}
+.custom-file-input-label:hover{
+  box-shadow: 5px 5px 5px brown;
+}
+
+#fileNameDisplay1,#fileNameDisplay2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1000px;
+  background-color: white;
+  margin: 30px 30px;
+  padding: 15px 15px;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-right: 10px;
+  color: dark;
+  box-shadow: 2px 2px 5px brown;
+}
+.input{
+  display: grid;
+  grid-template-columns: 1fr 1.5fr ;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  grid-gap: 10px; 
+}
+.buttons{
+  display: grid;
+  grid-template-columns: 0.7fr 1fr;
+}
+#cn{
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
