--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -27,7 +27,7 @@
       <div class="buttons">
         <a href="{% url 'myapp:createNewProject' %}"><button class="btn" id="taoform">Tạo đánh giá mới</button></a>
         <form action="{% url 'myapp:openProject' %}" method="POST" enctype="multipart/form-data" class="input">
-          <label for="fileInput1" class="custom-file-input-label">Mở đánh giá đã có :</label>
+          <label for="fileInput1" class="custom-file-input-label">Mở đánh giá đã có</label>
           <div class="custom-file-input-wrapper">
             <input type="file"
                     id="fileInput1"
