--- a/templates/pageSheet.html
+++ b/templates/pageSheet.html
@@ -45,7 +45,7 @@
         <form action="{% url 'myapp:upload' %}" method="POST" enctype="multipart/form-data" class="input">
           <label for="fileInput1"
             class="custom-file-input-label"
-          >Chọn tệp danh sách sinh viên:</label>
+          >Chọn tệp danh sách sinh viên</label>
 
           <div class="custom-file-input-wrapper">
             <input type="file"
